# Celestia-Toolkits

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REBUILD.MD  build.ninja  build.rs  build.zig  build.zig.zon  celestia-pdf-reader.spec  celestia-wallpaper.spec  configure.py  linux-wallpaperengine.spec  mpvpaper.spec
.github/workflows/: release.yml  static-analysis.yml
asstes/spine-example/: Maki_home.json  Maki_home.spine.lua  Maki_home.spine.toml
celestia-wallpaper/: Cargo.toml
celestia-wallpaper-holder/: Cargo.toml
celestia-wallpaper-holder/src/: main.rs
celestia-wallpaper/src/: cli.rs  log.rs  main.rs  monitor.rs  mpv_ctx.rs  renderer.rs  wayland.rs
celestia-wallpaper/src/renderers/: image.rs  mod.rs  mpv.rs  spine.rs  spine_lua.rs
docs/: browse-mode.md  config.md  index.md  ssh-linux.md
docs/development/: DEVELOPMENT.md
docs/i18n/: README_ja.md  README_zh.md
docs/project/: CODE_REVIEW_REPORT.md  PROJECT_STATUS.md  ROADMAP.md
dummy_include/libavcodec/: avfft.h
include/: renderer.h  ui_render_utils.h  video_player.h  video_player_layout_internal.h
kitdraw/: Cargo.toml
kitdraw/src/: app.rs  canvas.rs  kitty.rs  lib.rs  main.rs
mpvpaper/: Cargo.toml
mpvpaper-holder/: Cargo.toml
mpvpaper-holder/src/: main.rs
mpvpaper/src/: cli.rs  egl.rs  main.rs  monitor.rs  mpv_ctx.rs  wayland.rs
scripts/: install.sh  test_install_script.py
src/: Context.zig  app.c  app_file_manager_render.c  app_preview_grid.c  app_preview_render.c  app_single_render.c  app_single_render_runtime.c  audio_player.rs  config.rs  ffmpeg.rs  image_viewer.rs  input_dispatch_core.c  input_dispatch_key_single.c  kitty.rs  main.c  main.rs  main.zig  media_buffer.c  playback_control.rs  renderer.c  text_utils.c  ui_render_utils.c  video_player.c  video_player.rs  video_player_decode.c  video_player_layout.c  video_player_playback.c
src/WallpaperEngine/WebBrowser/CEF/: BrowserApp.cpp
src/config/: Config.zig
src/modes/: ViewMode.zig
src/services/: History.zig
tests/: input_dispatch_test_support.h  renderer_test_internal.h  test_app_preview_grid.c  test_app_single_render_integration.c  test_app_startup.c  test_book.c  test_browser.c  test_input_dispatch_core.c  test_input_dispatch_key_single.c  test_input_dispatch_support.c  test_preview_shared.c  test_renderer.c  test_text_utils.c  test_video_player.c  video_player_test_internal.h
