[package]
name = "celestia-wallpaper"
version = "1.8.0"
edition = "2021"
description = "Video wallpaper player using mpv for wlroots-based Wayland compositors"

[dependencies]
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.31", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
khronos-egl = { version = "6", features = ["dynamic"] }
libloading = "0.8"
gl = "0.14"
libmpv-sys = "3"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["event", "signal", "poll", "fs", "process"] }
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
rusty_spine = { git = "https://github.com/jabuwu/rusty_spine.git", rev = "bbe1cd699c058fab3e16435153605d33cc91ac3a", features = ["spine38"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
mlua = { version = "0.11", features = ["luajit", "send"], optional = true }

[features]
default = ["lua-scripting"]
lua-scripting = ["mlua"]
